--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@haensl/subset-sum": "^3.0.0",
+    "deep-equal": "^2.0.5",
+    "deepcopy": "^2.1.0",
     "eslint": "^7.15.0"
   }
 }
