--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@haensl/subset-sum": "^3.0.0",
     "deep-equal": "^2.0.5",
     "deepcopy": "^2.1.0",
-    "eslint": "^7.15.0"
+    "eslint": "^7.15.0",
+    "lodash.combinations": "^18.10.0",
+    "lodash.permutations": "^1.0.0",
+    "lodash.product": "^18.9.19"
   }
 }
